--- a/index.html
+++ b/index.html
@@ -9,6 +9,43 @@
 </head>
 <body>
 
+    <div id="container">
+        <div id="left">
+            <form action="" id="form">
+                <h3>Login</h3>
+                <input type="text" name="login" id="login">
+                <h3>Password</h3>
+                <input type="password" name="password" id="password">
+                <h3>Email address</h3>
+                <input type="text" name="email" id="email">
+                <input type="button" name="button" id="button" value="Add user">
+            </form>
+        </div>
+        <div id="right">
+            <table id="table">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Login</th>
+                        <th>Password</th>
+                        <th>Email</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
     <script src="./main.js"></script>
 </body>
