--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <th>Delete</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="tableBody">
                     <tr>
                         <td></td>
                         <td></td>
